@@ -1,7 +1,7 @@
 Package: parallelDist
 Type: Package
 Title: Parallel Distance Matrix Computation using Multiple Threads
-Version: 0.2.3
+Version: 0.2.4
 Author: Alexander Eckert [aut, cre],
   Lucas Godoy [ctb],
   Srikanth KS [ctb]
@@ -37,6 +37,6 @@ Imports: Rcpp (>= 0.12.6), RcppParallel (>= 4.3.20)
 LinkingTo: Rcpp, RcppParallel, RcppArmadillo
 SystemRequirements: C++11
 Suggests: dtw, ggplot2, proxy, testthat, RcppArmadillo, RcppXPtrUtils
-Packaged: 2018-12-11 17:45:06 UTC; alex
+Packaged: 2018-12-12 21:13:09 UTC; alex
 Repository: CRAN
-Date/Publication: 2018-12-11 23:30:03 UTC
+Date/Publication: 2018-12-12 22:50:02 UTC
