@@ -1,30 +1,30 @@
-8e962cd6432ce6e6b4138c30847f7ba3 *DESCRIPTION
+9c3c32e59308aa9e95953fad07b63198 *DESCRIPTION
 ddc22f9256278d01f52beb294419b7e3 *NAMESPACE
 b128d07f1cd9e7c9af907cb255922059 *R/RcppExports.R
 b35ff59413782f8b683944c9e80d76e2 *R/parDist.R
 fa7b6422e13a87be4da42e423a0dfd1a *README.md
 5f38294be0f150c3bb5ccfee2af21c88 *build/vignette.rds
-80f1e11a8552221ab58ff088c1ba7e8a *inst/NEWS.Rd
+690adbd319db5f52ae54072c43f59b25 *inst/NEWS.Rd
 cab7090d1de9442a303fc457fd36ccc8 *inst/doc/parallelDist.R
 738a30e867aa386bb9bb68798c1a586a *inst/doc/parallelDist.Rnw
-ec8f453b7fde30dd99fd1ba200ddc139 *inst/doc/parallelDist.pdf
+445a3abbb308d306f3895333e75752eb *inst/doc/parallelDist.pdf
 16b08e52a30b2ded343e59e0de094457 *man/parDist.Rd
 7d8a9415160d4ecfb9b57761f0261952 *src/BinaryCount.h
-065b3416c47a7539ab257057a19a8afd *src/DistanceBinary.h
+40e128b510a5a3a91a04b8018159c00c *src/DistanceBinary.h
 25f7bf390d5d5b874e3e97fa10d247f2 *src/DistanceDTWFactory.cpp
 81307930a18b576e8b56deb5f37caf38 *src/DistanceDTWFactory.h
-787f1a454a2993bda30b5540421c03e8 *src/DistanceDTWGeneric.h
-513d3eff5270b75ae5e660ef7ecfccd9 *src/DistanceDist.h
+1c14b0c215b02f8cf0d3835290674f98 *src/DistanceDTWGeneric.h
+06a3f547d5ad08342bc503e842453174 *src/DistanceDist.h
 3cfbdcce90b613b5e717229f3e04e9a7 *src/DistanceFactory.cpp
 df3bfbd91d3fbd782caf078e5a727abf *src/DistanceFactory.h
 293a4787eed614d48a4543d1e98b4d9d *src/IDistance.h
 ff1c8eb9763cb2ccdb2d8bea248a2c67 *src/Makevars
 5ee3a5367394328cd19a170c4b83f8ee *src/Makevars.win
 bc1611e903444155c2e94ed8f7361983 *src/RcppExports.cpp
-26228c76ecc440a18437b09e9c834c35 *src/StepPattern.h
+27dcd9e093afbc3610369c3148085075 *src/StepPattern.h
 ecb030cda6d48d085f19dce18ebc3cb2 *src/Util.cpp
 b8dcc60ca0a383c421686e6b3f175daf *src/Util.h
-0da7f1834d1092bfbfa128cc01c373a1 *src/parallelDist.cpp
+add7067e41afa67f715b146294334e0a *src/parallelDist.cpp
 42d6d70d59e97fda401995dfce8db5cc *tests/testthat.R
 60abb9bb90d81ff010320c76c483ae8a *tests/testthat/testMatrixCustomDistances.R
 847521062095f9142a5604442c38591d *tests/testthat/testMatrixDTWDistances.R
